--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Flexbox and css</title>
 </head>
 <body>
-    <a href="/grid.html">Link to Grid</a>
+    <a href="./grid.html">Link to Grid</a>
     <div class="card">
         <div class="card-1">
-            <img class="img-card1" src="/image/icon-sedans.svg" alt="">
+            <img class="img-card1" src="./image/icon-sedans.svg" alt="">
 
             <p class="head1">SEDANS</p>
             <P class="para1">Choose a sedan for it's affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip</P>
@@ -19,7 +19,7 @@
             <button class="btn1">Learn More</button>
         </div>
         <div class="card-2">
-            <img  class="img-card2" src="/image/icon-suvs.svg" alt="">
+            <img  class="img-card2" src="./image/icon-suvs.svg" alt="">
 
             <p class="head2">SUVS</p>
             <P class="para2">Take an SUV for its spacious interior, power, and versity.Perfect for your family vacation and off-road adventures.</P>
@@ -27,7 +27,7 @@
             <button class="btn2">Learn More</button>
         </div>
         <div class="card-3">
-            <img class="img-card3" src="/image/icon-luxury.svg" alt="">
+            <img class="img-card3" src="./image/icon-luxury.svg" alt="">
 
             <p class="head3">LUXURY</p>
             <P class="para3">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
