--- a/grid.html
+++ b/grid.html
@@ -8,7 +8,7 @@
     <title>Grid</title>
 </head>
 <body>
-    <a href="/index.html">Link to Flex-box</a>
+    <a href="./index.html">Link to Flex-box</a>
     <div class="container">
         <div class="box"></div>
         <div class="box"></div>
